--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ cachetools==6.2.1
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
+coverage==7.11.0
 docstring_parser==0.17.0
 fastapi==0.115.0
 google-api-core==2.26.0
@@ -22,10 +23,12 @@ grpcio-status==1.71.2
 h11==0.16.0
 httptools==0.7.1
 idna==3.11
+iniconfig==2.3.0
 lxml==6.0.2
 numpy==2.3.4
 packaging==25.0
 pillow==10.4.0
+pluggy==1.6.0
 proto-plus==1.26.1
 protobuf==5.29.5
 pyasn1==0.6.1
@@ -33,6 +36,8 @@ pyasn1_modules==0.4.2
 pydantic==2.9.0
 pydantic_core==2.23.2
 pypdf==5.1.0
+pytest==7.4.3
+pytest-cov==4.1.0
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.0.0
