Ajout ImageGenerator avec Vertex AI Imagen
- Génération images constellation via Vertex AI
- Gestion quota quotidien (100/jour)
- Validation images générées
- Exceptions spécifiques
- 16 tests unitaires avec mocking

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -13,6 +13,13 @@ addopts =
     --tb=short
     --strict-markers
 
+# Markers
+markers =
+    asyncio: mark test as async
+
+# Async configuration
+asyncio_mode = auto
+
 # Désactive les warnings de dépréciations (optionnel)
 filterwarnings =
     ignore::DeprecationWarning
