Ajout StarDetector avec OpenCV
- Détection étoiles via threshold MVP
- Extraction positions et couleurs
- Tri par luminosité
- Seuil adaptable
- 18 tests unitaires
- Fix NumPy <2 pour compatibilité OpenCV

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -72,3 +72,5 @@ types-requests==2.31.0.20240125
 httpx==0.26.0
 aiofiles==23.2.1
 pydantic-settings==2.1.0
+opencv-python==4.8.1.78
+numpy==1.26.4  # Compatible with OpenCV (numpy 2.x not yet supported)
